{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 339,
  "lineage": "a5ae10f2-7ebf-8869-5a62-2e752d3b8ad9",
  "resources": [
    {
      "module": "module.network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.16.1",
            "id": "projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-private",
            "ip_cidr_range": "10.0.16.0/20",
            "name": "newdemovasten52-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "private_ip_google_access": true,
            "project": "unique-badge-276520",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-public",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "newdemovasten52-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "private_ip_google_access": true,
            "project": "unique-badge-276520",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-09T15:35:58.951-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/unique-badge-276520/global/firewalls/newdemovasten52-private-allow-ingress",
            "name": "newdemovasten52-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "priority": 1000,
            "project": "unique-badge-276520",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/firewalls/newdemovasten52-private-allow-ingress",
            "source_ranges": [
              "10.0.0.0/20",
              "10.0.16.0/20",
              "10.1.0.0/20",
              "10.1.16.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-09T15:35:22.463-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/unique-badge-276520/global/firewalls/newdemovasten52-allow-restricted-inbound",
            "name": "newdemovasten52-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "priority": 1000,
            "project": "unique-badge-276520",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/firewalls/newdemovasten52-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-09T15:35:22.462-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/unique-badge-276520/global/firewalls/newdemovasten52-public-allow-ingress",
            "name": "newdemovasten52-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "priority": 1000,
            "project": "unique-badge-276520",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/firewalls/newdemovasten52-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_restricted_allow_inbound",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-09T15:35:22.552-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/unique-badge-276520/global/firewalls/newdemovasten52-public-restricted-allow-ingress",
            "name": "newdemovasten52-public-restricted-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "priority": 1000,
            "project": "unique-badge-276520",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/firewalls/newdemovasten52-public-restricted-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public-restricted"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "name": "newdemovasten52-network",
            "project": "unique-badge-276520",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-09T15:35:22.452-07:00",
            "id": "projects/unique-badge-276520/regions/us-west1/routers/newdemovasten52-router",
            "name": "newdemovasten52-router",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "project": "unique-badge-276520",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/regions/us-west1/routers/newdemovasten52-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "unique-badge-276520/us-west1/newdemovasten52-router/newdemovasten52-nat",
            "min_ports_per_vm": 0,
            "name": "newdemovasten52-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "unique-badge-276520",
            "region": "us-west1",
            "router": "newdemovasten52-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.vpc_router",
            "module.network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-09T15:35:22.746-07:00",
            "gateway_address": "10.0.16.1",
            "id": "projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-private",
            "ip_cidr_range": "10.0.16.0/20",
            "name": "newdemovasten52-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "private_ip_google_access": true,
            "project": "unique-badge-276520",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-private"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-09T15:35:22.719-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-public",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "newdemovasten52-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/global/networks/newdemovasten52-network",
            "private_ip_google_access": true,
            "project": "unique-badge-276520",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/unique-badge-276520/regions/us-west1/subnetworks/newdemovasten52-subnetwork-public"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}